--- a/programs/m6_1/Cargo.toml
+++ b/programs/m6_1/Cargo.toml
@@ -15,6 +15,7 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
+lang = []
 
 [dependencies]
 anchor-lang = "0.30.0"
